
  $summer   = checksum($handle, "[[>]CRC32"|"[>]Adler32");
  $sumvalue = checksum($summer); # when I/O on $handle is complete
  or:
  $sumvalue = checksum("string of data", ["CRC32"|"Adler32"])

  The CRC32 and Adler32 algorithms are supported.  With an I/O handle specifying
  a > before the algorithm name indicates that written data should be checksummed.

2.1-beta 4  (11 Sept 06)
===========
- added a literal form for arrays and hashes:
  @("a", "b", "c", "d", "e", @("f", "g", "h", "i"), "j", "k")
  %(a => "apple", b => "batman", c => "cow")
- fixed a bug in the Sleep parser transforming long/int literals
  into ObjectValues rather than LongValue/IntValue.
- string form of arrays and hashes (when converted to a string) is now 
  consistent with the sleep literal form
- added another debug level (8) for function call tracing.  while this
  flag is set all function calls with their arguments and return value
  will be displayed to the user as a runtime warning.  Enable with:
  debug(debug() & 8);
- HOES will now allow sleep data structures (arrays and hashes) to be passed
  as java.util.List and java.util.Map data structures (via an expensive
  conversion process).  This conversion only applies one way i.e. a Java List
  or Java Map can not be used as a Sleep array or hash.
- added the ability to import classes from external jar files into sleep:
  import org.jdom.* from: jdom.jar;
  
  Sleep also has a concept of a Sleep classpath, definable with sleep.classpath
  or through the static methods in sleep.parser.ParserConfig.
- updated the use() function to use the sleep classpath to search for the
  specified jar file.
- fixed lambda({}, $x => $y) sharing scalar container references (caused a 
  change to $x inside of the closure to affect the value of $y)

2.1-beta 3  (18 Aug 06)
===========
- added an optional timeout parameter for the socket connect function i.e.:
  $socket = connect("host", port, [timeout in milliseconds]) 
  default is 60 seconds.