@@ -1,0 +1,4 @@
+(1) Digest value of test.jar is: 17bc99c1ea48937e2f702c7ef1c5025c good? yes
+(2) Another test of repacked data: good
+(3) Digest value of test.jar is: 17bc99c1ea48937e2f702c7ef1c5025c good? yes
+Digest of written data is: 17bc99c1ea48937e2f702c7ef1c5025c
